# scfg

./: .bazelrc  BUILD.bazel  LICENSE.txt  README.md  WORKSPACE  example.cc  scfg.h  scfg_deps.bzl
scfg/: ini.c  ini.h  scfg.hpp  scfg_types.hpp
