load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "scfg",
    linkstatic = 1,
    srcs = [
        "scfg/ini.c",
        "scfg/ini.h",
    ],
    hdrs = [
        "scfg/scfg.hpp",
        "scfg/scfg_types.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "example",
    srcs = ["example.cc"],
    deps = [":scfg"]
)
