load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "scfg",
    srcs = [
        "scfg/ini.c",
        "scfg/ini.h",
    ],
    hdrs = [
        "scfg/scfg.hpp",
        "scfg/scfg_types.hpp",
    ],
    linkstatic = 1,
    local_defines = [
        "INI_USE_STACK=0",
        "INI_ALLOW_REALLOC=1",
        "INI_MAX_LINE=32768",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_github_jbeder_yaml_cpp//:yaml-cpp"],
)

cc_binary(
    name = "example",
    srcs = ["example.cc"],
    deps = [":scfg"],
)
